# sand-game

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: global.h  init.c  input.c  input.h  main.c  particle.c  particle.h  render.c  render.h  screen.c  screen.h  sprite.c  sprite.h
